--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Laura Cordeiro</title>
-      <link rel="icon" href="../src/assets/logoSite.png" type="image/png">
+      <link rel="icon" href="/logoSite.png" type="image/png">
     </head>
 
     <body>
